--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ colored = "2.1.0"
 jsonwebtoken = "9.3.0"
 log = "0.4.22"
 mongodb = "3.1.0"
+oauth2 = "4.4.2"
 serde = "1.0.210"
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
