--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ jsonwebtoken = "9.3.0"
 log = "0.4.22"
 mongodb = "3.1.0"
 oauth2 = "4.4.2"
+reqwest = { version = "0.12.8", features = ["json"] }
 serde = "1.0.210"
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
