--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 axum = "0.7.7"
 chrono = { version = "0.4.38", features = ["serde"] }
 colored = "2.1.0"
+google-drive3 = "6.0.0"
+hyper-util = "0.1.9"
 jsonwebtoken = "9.3.0"
 log = "0.4.22"
 mongodb = "3.1.0"
