--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { version = "0.12.8", features = ["json"] }
 serde = "1.0.210"
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-util = "0.7.12"
 tower = "0.5.1"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 tracing = "0.1.40"
