--- a/.compose/.env.example
+++ b/.compose/.env.example
@@ -1,5 +1,9 @@
+SECRET_KEY = "8Xui8SN4mI+7egV/9dlfYYLGQJeEx4+DwmSQLwDVXJg="
+DB_URL = "mongodb://mongodb:27017"
+DB_NAME = "rust_google_drive_api"
+
 GOOGLE_CLIENT_ID = 
 GOOGLE_CLIENT_SECRET = 
-GOOGLE_AUTH_URL = 
-GOOGLE_TOKEN_URL = 
-GOOGLE_REDIRECT_URL = 
+GOOGLE_AUTH_URL = "https://accounts.google.com/o/oauth2/auth"
+GOOGLE_TOKEN_URL = "https://oauth2.googleapis.com/token"
+GOOGLE_REDIRECT_URL = "http://localhost:8080/api/public/callback"
